# ai-whisper-websearch-llm-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mcp_server/: client.py
models/: bedrock_model.py  ollama_model.py
tools/: audio_tts_server.py  elevenLabs.py  polly.py  promptGen.py  searchone.py  serpApi.py  voice.py  vosk.py  weather.py  whisper.py
